--- a/Ch1 - Data Preprocessing.ipynb
+++ b/Ch1 - Data Preprocessing.ipynb
@@ -8,49 +8,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Importing the libraries and dataset ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Every project begins with libraries imports and dataset imports. Below are some snippets of code that should be found at the beginning of every project."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ulysse/Documents/GitHub/mooc-udemy-mlAtoZ/datasets\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Change current working directory to fetch the dataset\n",
+    "working_location = os.chdir('datasets')\n",
+    "working_location = os.getcwd()\n",
+    "print(working_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the dataset\n",
-    "dataset = pd.read_csv(\"Data.csv\")\n",
+    "dataset = pd.read_csv(\"Part1-Data.csv\")\n",
     "X = dataset.iloc[:,:-1].values\n",
     "y = dataset.iloc[:,3].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 nan]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' nan 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Missing values ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If values are missing, you can delete the line, delete the column or take the average of the whole column or whole line."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If values are missing, you can delete the line, delete the column or\n",
-    "# take the average of the whole column or whole line\n",
+    "# This can be done with the Imputer class\n",
     "from sklearn.preprocessing import Imputer\n",
     "\n",
-    "# Strategies available: mean, median, most_frequent\n",
+    "# Strategies available are: mean, median, most_frequent. Here we pick mean\n",
     "imputer = Imputer(missing_values = 'NaN', strategy = 'mean', axis = 0)\n",
     "imputer.fit(X[:,1:3])\n",
     "X[:,1:3] = imputer.transform(X[:,1:3])"
@@ -58,20 +123,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Categorical data ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We cannot feed such categorical data like the first column to a model, here is how we change it."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take are of the categorical variables\n",
+    "# Let's import the right tools\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
     "\n",
     "# Changes label into numbers\n",
@@ -90,30 +186,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.00000000e+00 0.00000000e+00 0.00000000e+00 4.40000000e+01\n",
+      "  7.20000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 2.70000000e+01\n",
+      "  4.80000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 3.00000000e+01\n",
+      "  5.40000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.80000000e+01\n",
+      "  6.10000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 4.00000000e+01\n",
+      "  6.37777778e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.50000000e+01\n",
+      "  5.80000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.87777778e+01\n",
+      "  5.20000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 4.80000000e+01\n",
+      "  7.90000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 5.00000000e+01\n",
+      "  8.30000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.70000000e+01\n",
+      "  6.70000000e+04]]\n",
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Other way of doing dummy variable\n",
+    "# Template of another way of doing dummy variable\n",
     "columns_to_dummy = ['nanana', 'nana', 'nananana']\n",
     "\n",
     "df = pd.get_dummies(df,columns=columns_to_dummy,drop_first=True)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Splitting the dataset into test and train set ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now time to split the dataset into test and train set."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now time to split the dataset into test and train set\n",
+    "# Here is the classic way to do so, the random_state is to reproduce specific results and the test_size ratio should be played with\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 42 )"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Feature scaling ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Depending on the algorithm it is a best practice to put the features on the same scale. The classic way to do so is to remove the mean and scale by the unit variance. <br>**NB**: The test set should only be transformed and not help to fit the scaler."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
