Avoiding the dummy variable trap

--- a/Ch1 - Data Preprocessing.ipynb
+++ b/Ch1 - Data Preprocessing.ipynb
@@ -178,6 +178,7 @@
     "# DON'T FORGET TO DROP ONE OF THE COLUMNS\n",
     "onehotencoder = OneHotEncoder(categorical_features = [0])\n",
     "X = onehotencoder.fit_transform(X).toarray()\n",
+    "X = X[:, 1:]\n",
     "\n",
     "# Encoding the Dependent Variable\n",
     "labelencoder_y = LabelEncoder()\n",
@@ -193,26 +194,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.00000000e+00 0.00000000e+00 0.00000000e+00 4.40000000e+01\n",
-      "  7.20000000e+04]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 2.70000000e+01\n",
-      "  4.80000000e+04]\n",
-      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 3.00000000e+01\n",
-      "  5.40000000e+04]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.80000000e+01\n",
-      "  6.10000000e+04]\n",
-      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 4.00000000e+01\n",
-      "  6.37777778e+04]\n",
-      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.50000000e+01\n",
-      "  5.80000000e+04]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00 3.87777778e+01\n",
-      "  5.20000000e+04]\n",
-      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 4.80000000e+01\n",
-      "  7.90000000e+04]\n",
-      " [0.00000000e+00 1.00000000e+00 0.00000000e+00 5.00000000e+01\n",
-      "  8.30000000e+04]\n",
-      " [1.00000000e+00 0.00000000e+00 0.00000000e+00 3.70000000e+01\n",
-      "  6.70000000e+04]]\n",
+      "[[0.00000000e+00 0.00000000e+00 4.40000000e+01 7.20000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 2.70000000e+01 4.80000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 3.00000000e+01 5.40000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 3.80000000e+01 6.10000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 4.00000000e+01 6.37777778e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 3.50000000e+01 5.80000000e+04]\n",
+      " [0.00000000e+00 1.00000000e+00 3.87777778e+01 5.20000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 4.80000000e+01 7.90000000e+04]\n",
+      " [1.00000000e+00 0.00000000e+00 5.00000000e+01 8.30000000e+04]\n",
+      " [0.00000000e+00 0.00000000e+00 3.70000000e+01 6.70000000e+04]]\n",
       "[0 1 0 0 1 1 0 1 0 1]\n"
      ]
     }
@@ -224,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Template of another way of doing dummy variable\n",
-    "columns_to_dummy = ['nanana', 'nana', 'nananana']\n",
-    "\n",
-    "df = pd.get_dummies(df,columns=columns_to_dummy,drop_first=True)"
+    "## Template of another way of doing dummy variable\n",
+    "#columns_to_dummy = ['nanana', 'nana', 'nananana']\n",
+    "#\n",
+    "#df = pd.get_dummies(df,columns=columns_to_dummy,drop_first=True)"
    ]
   },
   {
